fix: hide first cat on mobile

--- a/frontend/src/stylesheets/main.scss
+++ b/frontend/src/stylesheets/main.scss
@@ -24,6 +24,12 @@ body {
 .picturePosition {
   width: 50%;
   right: -25.2%;
+
+  display: none;
+
+  @include media-breakpoint-up(md) {
+    display: block;
+  }
 }
 
 .picturePosition2 {
